# bellboy

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth_helper.rs  caddy_install.rs  caddy_permissions.rs  caddy_process.rs  caddy_supervisor.rs  caddyfile.rs  config_store.rs  dns.rs  hosts.rs  lib.rs  main.rs  model.rs  node_env.rs  system_trust.rs
src/components/: DependencyBanner.tsx  RuleEditor.tsx  SiteCard.tsx  SiteDialog.tsx  StatusBar.tsx
